# robotiq_2f_ros2

robotiq_2f_85_description/: CMakeLists.txt  package.xml
robotiq_2f_85_description/launch/: view.launch.py
robotiq_2f_85_description/meshes/collision/: base.stl  finger1.stl  finger2.stl  finger3.stl  finger4.stl  fingertip.stl  grp_es_cpl_062.stl
robotiq_2f_85_description/meshes/visual/: base.dae  finger1.dae  finger2.dae  finger3.dae  finger4.dae  fingertip.dae  grp_es_cpl_062.dae
robotiq_2f_85_description/rviz/: view.rviz
robotiq_2f_85_description/urdf/: robotiq_2f_85.ros2_control.xacro  robotiq_2f_85.urdf.xacro  robotiq_2f_85_macro.xacro
